--- a/index.html
+++ b/index.html
@@ -54,6 +54,95 @@
         </button>
       </div>
     </header>
+    <main class="content">
+      <section class="section section--hidden-x container">
+        <div class="section__body">
+          <div class="hero">
+            <div class="hero__main">
+              <div class="hero__body">
+                <h1 class="hero__title">
+                  Navigating the digital landscape for success
+                </h1>
+                <div class="hero__description">
+                  <p>
+                    Our digital marketing agency helps businesses grow and
+                    succeed online through a range of services including SEO,
+                    PPC, social media marketing, and content creation.
+                  </p>
+                </div>
+                <button class="hero__button button">Book a consultation</button>
+              </div>
+              <img
+                src="images/bg-about.jpg"
+                alt="Рупор"
+                width="600"
+                height="515"
+                class="hero__image"
+              />
+            </div>
+            <div class="hero__partners">
+              <h2 class="visually-hidden">Our partners</h2>
+              <ul class="hero__partners-list">
+                <li class="hero__partners-item">
+                  <img
+                    src="images/icons/amazon.svg"
+                    alt="amazon"
+                    class="hero__partners-image"
+                    width="130"
+                    height="48"
+                  />
+                </li>
+                <li class="hero__partners-item">
+                  <img
+                    src="images/icons/dribble.svg"
+                    alt="dribble"
+                    class="hero__partners-image"
+                    width="130"
+                    height="48"
+                  />
+                </li>
+                <li class="hero__partners-item">
+                  <img
+                    src="images/icons/hubspot.svg"
+                    alt="hubspot"
+                    class="hero__partners-image"
+                    width="130"
+                    height="48"
+                  />
+                </li>
+                <li class="hero__partners-item">
+                  <img
+                    src="images/icons/notion.svg"
+                    alt="notion"
+                    class="hero__partners-image"
+                    width="130"
+                    height="48"
+                  />
+                </li>
+                <li class="hero__partners-item">
+                  <img
+                    src="images/icons/netflix.svg"
+                    alt="netflix"
+                    class="hero__partners-image"
+                    width="130"
+                    height="48"
+                  />
+                </li>
+                <li class="hero__partners-item">
+                  <img
+                    src="images/icons/zoom.svg"
+                    alt="zoom"
+                    class="hero__partners-image"
+                    width="130"
+                    height="48"
+                  />
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <dialog class="mobile-overlay" id="mobileOverlay">
       <form class="mobile-overlay__close-button-wrapper" method="dialog">
         <button class="mobile-overlay__close-button cross-button" type="submit">
