--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <img
                   src="images/banner-image.svg"
                   alt=""
-                  class="banner__image"
+                  class="banner__image hidden-mobile"
                   width="494"
                   height="394"
                 />
