add adaptive studies-section

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <p>
                   For a national retail chain, we created a social media
                   marketing campaign that increased followers by 25% and
-                  generated a 20% increase in online sales.
+                  generated a 20% increase in online sale.
                 </p>
               </div>
               <a href="/" class="studies__link"
