add adaptive reviews-section

--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,10 @@
               <div class="reviews__pagination pagination">
                 <ul class="pagination__list">
                   <il class="pagination__item"
-                    ><button type="button" class="pagination__button">
+                    ><button
+                      type="button"
+                      class="pagination__button is-current"
+                    >
                       <span class="visually-hidden">First slide</span>
                       <svg
                         width="14"
@@ -1090,7 +1093,7 @@
                       </svg></button
                   ></il>
                   <il class="pagination__item"
-                    ><button class="pagination__button is-current">
+                    ><button class="pagination__button">
                       <span class="visually-hidden">Third slide</span>
                       <svg
                         width="14"
