--- a/index.html
+++ b/index.html
@@ -1160,6 +1160,81 @@
           </div>
         </div>
       </section>
+      <section class="section container">
+        <header class="section__header">
+          <h3 class="section__title puddle-bg">Contact Us</h3>
+          <div class="section__description">
+            <p>Connect with Us: Let's Discuss Your Digital Marketing Needs</p>
+          </div>
+        </header>
+        <div class="section__body">
+          <div class="contact-us">
+            <form class="contact-us__form">
+              <fieldset class="contact-us__request-type radios">
+                <legend class="radios__title visually-hidden">
+                  Request type
+                </legend>
+                <label class="radios__item radio">
+                  <input
+                    class="radio__input visually-hidden"
+                    type="radio"
+                    name="request-type"
+                    value="Say Hi"
+                    checked
+                  />
+                  <span class="radio__emulator"></span>
+                  <span class="radio__label">Say Hi</span>
+                </label>
+                <label class="radios__item radio">
+                  <input
+                    class="radio__input visually-hidden"
+                    type="radio"
+                    name="request-type"
+                    value="Get a Quote"
+                  />
+                  <span class="radio__emulator"></span>
+                  <span class="radio__label">Get a Quote</span>
+                </label>
+              </fieldset>
+              <div class="contact-us__body">
+                <div class="contact-us__field field">
+                  <label class="field__label" for="name">Name</label>
+                  <input
+                    class="field__input"
+                    type="text"
+                    id="name"
+                    name="name"
+                    placeholder="Name"
+                  />
+                </div>
+                <div class="contact-us__field field">
+                  <label class="field__label" for="email">Email*</label>
+                  <input
+                    class="field__input"
+                    type="email"
+                    id="email"
+                    name="email"
+                    placeholder="Email"
+                  />
+                </div>
+                <div class="contact-us__field field">
+                  <label class="field__label" for="message">Message*</label>
+                  <textarea
+                    class="field__textarea"
+                    type="text"
+                    id="message"
+                    name="message"
+                    placeholder="Message"
+                  ></textarea>
+                </div>
+              </div>
+              <button class="contact-us__button button" type="submit">
+                Send Message
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
     <dialog class="mobile-overlay" id="mobileOverlay">
       <form class="mobile-overlay__close-button-wrapper" method="dialog">
