--- a/index.html
+++ b/index.html
@@ -1236,6 +1236,162 @@
         </div>
       </section>
     </main>
+    <footer class="footer container">
+      <div class="footer__inner">
+        <div class="footer__navigation">
+          <img
+            class="footer__logo"
+            src="images/icons/Logo-light.svg"
+            alt="Logo"
+            width="180"
+            height="29"
+          />
+          <div class="footer__menu">
+            <ul class="footer__menu-list">
+              <li class="footer__menu-item">
+                <a href="/" class="footer__menu-link">About us</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="/" class="footer__menu-link">Services</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="/" class="footer__menu-link">Use Cases</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="/" class="footer__menu-link">Pricing</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="/" class="footer__menu-link">Blog</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__soc1als soc1als">
+            <ul class="soc1als__list">
+              <li class="soc1als__item">
+                <a href="/" class="soc1als__link">
+                  <span class="visually-hidden">linkedin</span>
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.22178 15.0586H4.30589V5.07422H1.22178V15.0586Z"
+                      fill="black"
+                    />
+                    <path
+                      d="M0.941406 1.88672C0.941406 2.87109 1.7358 3.66797 2.76384 3.66797C3.74514 3.66797 4.53954 2.87109 4.53954 1.88672C4.53954 0.902344 3.74514 0.0585938 2.76384 0.0585938C1.7358 0.0585938 0.941406 0.902344 0.941406 1.88672Z"
+                      fill="black"
+                    />
+                    <path
+                      d="M12.8106 15.0586H15.9414V9.57422C15.9414 6.90234 15.3339 4.79297 12.2031 4.79297C10.7078 4.79297 9.67972 5.63672 9.25916 6.43359H9.21243V5.07422H6.26851V15.0586H9.35262V10.1367C9.35262 8.82422 9.58627 7.55859 11.2218 7.55859C12.8106 7.55859 12.8106 9.05859 12.8106 10.1836V15.0586Z"
+                      fill="black"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <li class="soc1als__item">
+                <a href="/" class="soc1als__link"
+                  ><span class="visually-hidden">facebook</span
+                  ><svg
+                    width="800px"
+                    height="800px"
+                    viewBox="-5 0 20 20"
+                    version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                  >
+                    <g
+                      id="Page-1"
+                      stroke="none"
+                      stroke-width="1"
+                      fill="none"
+                      fill-rule="evenodd"
+                    >
+                      <g
+                        id="Dribbble-Light-Preview"
+                        transform="translate(-385.000000, -7399.000000)"
+                        fill="#000000"
+                      >
+                        <g
+                          id="icons"
+                          transform="translate(56.000000, 160.000000)"
+                        >
+                          <path
+                            d="M335.821282,7259 L335.821282,7250 L338.553693,7250 L339,7246 L335.821282,7246 L335.821282,7244.052 C335.821282,7243.022 335.847593,7242 337.286884,7242 L338.744689,7242 L338.744689,7239.14 C338.744689,7239.097 337.492497,7239 336.225687,7239 C333.580004,7239 331.923407,7240.657 331.923407,7243.7 L331.923407,7246 L329,7246 L329,7250 L331.923407,7250 L331.923407,7259 L335.821282,7259 Z"
+                            id="facebook-[#176]"
+                          ></path>
+                        </g>
+                      </g>
+                    </g>
+                  </svg>
+                </a>
+              </li>
+              <li class="soc1als__item">
+                <a href="/" class="soc1als__link"
+                  ><span class="visually-hidden">twitter</span
+                  ><svg
+                    width="18"
+                    height="16"
+                    viewBox="0 0 18 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M15.9961 4.4915C16.6854 3.97449 17.3058 3.35409 17.7884 2.63028C17.168 2.90602 16.4442 3.11282 15.7204 3.18176C16.4786 2.73369 17.0301 2.04435 17.3058 1.18267C16.6165 1.59628 15.8238 1.90648 15.031 2.07881C14.3417 1.35501 13.4111 0.941406 12.3771 0.941406C10.378 0.941406 8.75804 2.56135 8.75804 4.56043C8.75804 4.83617 8.79251 5.1119 8.86144 5.38764C5.86282 5.2153 3.1744 3.76769 1.38212 1.59628C1.07192 2.11328 0.899586 2.73369 0.899586 3.42302C0.899586 4.66383 1.51999 5.76677 2.51953 6.42165C1.93359 6.38718 1.34766 6.24931 0.86512 5.97358V6.00804C0.86512 7.76585 2.10593 9.21346 3.76034 9.55813C3.48461 9.62707 3.13994 9.696 2.82973 9.696C2.58847 9.696 2.38166 9.66154 2.1404 9.62707C2.58847 11.0747 3.93267 12.1087 5.51815 12.1432C4.27734 13.1082 2.72633 13.6942 1.03745 13.6942C0.727252 13.6942 0.451517 13.6597 0.175781 13.6252C1.76126 14.6592 3.65694 15.2452 5.72495 15.2452C12.3771 15.2452 15.9961 9.76494 15.9961 4.97403C15.9961 4.8017 15.9961 4.66383 15.9961 4.4915Z"
+                      fill="black"
+                    />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__body">
+          <div class="footer__contacts">
+            <h2 class="footer__contacts-title h4 puddle-bg">Contact us:</h2>
+            <address class="footer__contacts-body">
+              <p>
+                Email:
+                <a href="mailto:info@positivus.com">info@positivus.com</a>
+              </p>
+              <p>
+                Phone:
+                <a href="tel:5555678901">555-567-8901</a>
+              </p>
+              <p>
+                Address: 1234 Main St<br />
+                Moonstone City, Stardust State 12345
+              </p>
+            </address>
+          </div>
+          <form class="footer__subscribe-form subscribe-form">
+            <h2 class="subscribe-form__title visually-hidden">Subscribtion</h2>
+            <label class="field__label visually-hidden" for="subscribe-form"
+              >Email</label
+            >
+            <input
+              class="field__input field__input--dark"
+              type="email"
+              id="subscribe-form"
+              name="email"
+              placeholder="Email"
+            />
+            <button class="subscribe-form__button button button--accent">
+              Subscribe to news
+            </button>
+          </form>
+        </div>
+        <div class="footer__extra">
+          <p class="footer__copyright">
+            © 2023 Positivus. All Rights Reserved.
+          </p>
+          <a href="/" class="footer__privacy-policy-link">Privacy Policy</a>
+        </div>
+      </div>
+    </footer>
     <dialog class="mobile-overlay" id="mobileOverlay">
       <form class="mobile-overlay__close-button-wrapper" method="dialog">
         <button class="mobile-overlay__close-button cross-button" type="submit">
