--- a/index.html
+++ b/index.html
@@ -1373,7 +1373,7 @@
               >Email</label
             >
             <input
-              class="field__input field__input--dark"
+              class="field__input subscribe-form__input"
               type="email"
               id="subscribe-form"
               name="email"
