--- a/index.html
+++ b/index.html
@@ -1407,7 +1407,7 @@
             <a href="/" class="mobile-overlay__link">Services</a>
           </li>
           <li class="mobile-overlay__item">
-            <a href="/" class="mobile-overlay__link">Use Cases</a>
+            <a href="/" class="mobile-overlay__link">Use Case</a>
           </li>
           <li class="mobile-overlay__item">
             <a href="/" class="mobile-overlay__link">Pricing</a>
