--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
               </p>
               <p>
                 Phone:
-                <a href="tel:5555678901">555-567-8901</a>
+                <a href="tel:5565678901">556-567-8901</a>
               </p>
               <p>
                 Address: 1234 Main St<br />
@@ -1373,7 +1373,7 @@
               >Email</label
             >
             <input
-              class="field__input field__input--dark"
+              class="field__input subscribe-form__input"
               type="email"
               id="subscribe-form"
               name="email"
@@ -1407,7 +1407,7 @@
             <a href="/" class="mobile-overlay__link">Services</a>
           </li>
           <li class="mobile-overlay__item">
-            <a href="/" class="mobile-overlay__link">Use Cases</a>
+            <a href="/" class="mobile-overlay__link">Use Case</a>
           </li>
           <li class="mobile-overlay__item">
             <a href="/" class="mobile-overlay__link">Pricing</a>
